[package]
name = "termcards"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2.177"
portable-pty = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite"] }
thiserror = "2.0.17"
toml = "0.9.8"
